Made DeltaTime Calculation Global

--- a/125_G.vcxproj.filters
+++ b/125_G.vcxproj.filters
@@ -2,6 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="Client.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Model.cpp" />
@@ -22,6 +23,7 @@
   <ItemGroup>
     <ClInclude Include="Client.h" />
     <ClInclude Include="assimpConvert.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Model.h" />
