--- a/125_G.vcxproj
+++ b/125_G.vcxproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <ClCompile Include="ColliderAABB.cpp" />
     <ClCompile Include="Client.cpp" />
+    <ClCompile Include="ColliderCircle.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="Harvestable.cpp" />
     <ClCompile Include="Holdable.cpp" />
@@ -151,6 +152,7 @@
     <ClInclude Include="assimpConvert.h" />
     <ClInclude Include="Collidable.h" />
     <ClInclude Include="Collider.h" />
+    <ClInclude Include="ColliderCircle.h" />
     <ClInclude Include="Drawable.h" />
     <ClInclude Include="GameEntity.h" />
     <ClInclude Include="GameManager.h" />
