--- a/125_G.vcxproj
+++ b/125_G.vcxproj
@@ -33,7 +33,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -43,7 +43,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -124,10 +124,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ColliderAABB.cpp" />
-    <ClCompile Include="Client.cpp" />
+    <ClCompile Include="Network\Client.cpp" />
     <ClCompile Include="ColliderCircle.cpp" />
     <ClCompile Include="GameManager.cpp" />
-    <ClCompile Include="Harvestable.cpp" />
     <ClCompile Include="Holdable.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="main.cpp" />
@@ -139,7 +138,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Plot.cpp" />
     <ClCompile Include="SabotageItem.cpp" />
-    <ClCompile Include="Server.cpp" />
+    <ClCompile Include="Network\Server.cpp" />
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="stb_image.cpp" />
     <ClCompile Include="Tools.cpp" />
@@ -148,7 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ColliderAABB.h" />
-    <ClInclude Include="Client.h" />
+    <ClInclude Include="Network\Client.h" />
     <ClInclude Include="assimpConvert.h" />
     <ClInclude Include="PhysicsObject.h" />
     <ClInclude Include="Collider.h" />
@@ -168,7 +167,8 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Plot.h" />
     <ClInclude Include="Sabotageable.h" />
-    <ClInclude Include="Server.h" />
+    <ClInclude Include="Network\Server.h" />
+    <ClInclude Include="SabotageItem.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="Tools.h" />
@@ -177,6 +177,7 @@
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="packages.config" />
     <None Include="shaders\animation.frag" />
     <None Include="shaders\animation.vert" />
