--- a/125_G.vcxproj.filters
+++ b/125_G.vcxproj.filters
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="Client.cpp" />
+    <ClCompile Include="Network\Client.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mesh.cpp" />
@@ -16,16 +16,15 @@
     <ClCompile Include="SabotageItem.cpp" />
     <ClCompile Include="Plot.cpp" />
     <ClCompile Include="Vegetable.cpp" />
-    <ClCompile Include="Harvestable.cpp" />
     <ClCompile Include="Holdable.cpp" />
     <ClCompile Include="InputManager.cpp" />
-    <ClCompile Include="Server.cpp" />
+    <ClCompile Include="Network\Server.cpp" />
     <ClCompile Include="ColliderAABB.cpp" />
     <ClCompile Include="ColliderCircle.cpp" />
     <ClCompile Include="PhysicsEngine.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Client.h" />
+    <ClInclude Include="Network\Client.h" />
     <ClInclude Include="assimpConvert.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="main.h" />
@@ -46,13 +45,14 @@
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Interactable.h" />
     <ClInclude Include="Sabotageable.h" />
-    <ClInclude Include="Server.h" />
+    <ClInclude Include="Network\Server.h" />
     <ClInclude Include="ColliderAABB.h" />
     <ClInclude Include="PhysicsObject.h" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="ColliderCircle.h" />
     <ClInclude Include="PhysicsEngine.h" />
     <ClInclude Include="util.h" />
+    <ClInclude Include="SabotageItem.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -62,5 +62,6 @@
     <None Include="shaders\model.vert" />
     <None Include="shaders\shader.frag" />
     <None Include="shaders\shader.vert" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
