--- a/125_G.vcxproj.filters
+++ b/125_G.vcxproj.filters
@@ -18,11 +18,15 @@
     <ClCompile Include="Vegetable.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Network\Server.cpp" />
-    <ClCompile Include="ColliderAABB.cpp" />
+    <ClCompile Include="ColliderAAsBB.cpp" />
     <ClCompile Include="ColliderCircle.cpp" />
     <ClCompile Include="PhysicsEngine.cpp" />
     <ClCompile Include="DepthMap.cpp" />
     <ClCompile Include="Network\ServerMain.cpp" />
+    <ClCompile Include="imgui\imgui.cpp" />
+    <ClCompile Include="imgui\imgui_demo.cpp" />
+    <ClCompile Include="imgui\imgui_draw.cpp" />
+    <ClCompile Include="imgui\imgui_impl_glfw_gl3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network\Client.h" />
@@ -58,6 +62,13 @@
     <ClInclude Include="Holdable.h" />
     <ClInclude Include="DepthMap.h" />
     <ClInclude Include="glm.h" />
+    <ClInclude Include="imgui\imgui_internal.h" />
+    <ClInclude Include="imgui\imconfig.h" />
+    <ClInclude Include="imgui\imgui.h" />
+    <ClInclude Include="imgui\imgui_impl_glfw_gl3.h" />
+    <ClInclude Include="imgui\stb_rect_pack.h" />
+    <ClInclude Include="imgui\stb_textedit.h" />
+    <ClInclude Include="imgui\stb_truetype.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
