--- a/125_G.vcxproj.filters
+++ b/125_G.vcxproj.filters
@@ -53,6 +53,7 @@
     <ClInclude Include="PhysicsEngine.h" />
     <ClInclude Include="util.h" />
     <ClInclude Include="SabotageItem.h" />
+    <ClInclude Include="Network\NetworkPacket.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
