--- a/125_G.vcxproj.filters
+++ b/125_G.vcxproj.filters
@@ -27,6 +27,14 @@
     <ClCompile Include="imgui\imgui_demo.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
     <ClCompile Include="imgui\imgui_impl_glfw_gl3.cpp" />
+    <ClCompile Include="UI\imgui\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="UI\imgui\imgui_tables.cpp" />
+    <ClCompile Include="UI\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="UI\imgui\imgui.cpp" />
+    <ClCompile Include="UI\imgui\imgui_demo.cpp" />
+    <ClCompile Include="UI\imgui\imgui_draw.cpp" />
+    <ClCompile Include="UI\imgui\imgui_impl_glfw.cpp" />
+    <ClCompile Include="UI\GUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network\Client.h" />
@@ -69,6 +77,20 @@
     <ClInclude Include="imgui\stb_rect_pack.h" />
     <ClInclude Include="imgui\stb_textedit.h" />
     <ClInclude Include="imgui\stb_truetype.h" />
+    <ClInclude Include="UI\imgui\imgui_internal.h" />
+    <ClInclude Include="UI\imgui\imgui_impl_glfw_gl3.h" />
+    <ClInclude Include="UI\imgui\stb_rect_pack.h" />
+    <ClInclude Include="UI\imgui\stb_textedit.h" />
+    <ClInclude Include="UI\imgui\stb_truetype.h" />
+    <ClInclude Include="UI\imgui\imgui_impl_opengl3.h" />
+    <ClInclude Include="UI\imgui\imgui_impl_opengl3_loader.h" />
+    <ClInclude Include="UI\imgui\imstb_rectpack.h" />
+    <ClInclude Include="UI\imgui\imstb_textedit.h" />
+    <ClInclude Include="UI\imgui\imstb_truetype.h" />
+    <ClInclude Include="UI\imgui\imconfig.h" />
+    <ClInclude Include="UI\imgui\imgui.h" />
+    <ClInclude Include="UI\imgui\imgui_impl_glfw.h" />
+    <ClInclude Include="UI\GUI.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -81,5 +103,9 @@
     <None Include="ClassDiagram.cd" />
     <None Include="shaders\shadows.frag" />
     <None Include="shaders\shadows.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="UI\Pictures\p1.jpg" />
+    <Image Include="UI\Pictures\p2.jpg" />
   </ItemGroup>
 </Project>
