--- a/125_G.vcxproj.filters
+++ b/125_G.vcxproj.filters
@@ -22,6 +22,7 @@
     <ClCompile Include="ColliderAABB.cpp" />
     <ClCompile Include="ColliderCircle.cpp" />
     <ClCompile Include="PhysicsEngine.cpp" />
+    <ClCompile Include="DepthMap.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network\Client.h" />
@@ -53,6 +54,7 @@
     <ClInclude Include="PhysicsEngine.h" />
     <ClInclude Include="util.h" />
     <ClInclude Include="SabotageItem.h" />
+    <ClInclude Include="DepthMap.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -63,5 +65,7 @@
     <None Include="shaders\shader.frag" />
     <None Include="shaders\shader.vert" />
     <None Include="ClassDiagram.cd" />
+    <None Include="shaders\shadows.frag" />
+    <None Include="shaders\shadows.vert" />
   </ItemGroup>
 </Project>
