--- a/125_G.vcxproj.filters
+++ b/125_G.vcxproj.filters
@@ -22,6 +22,7 @@
     <ClCompile Include="ColliderCircle.cpp" />
     <ClCompile Include="PhysicsEngine.cpp" />
     <ClCompile Include="DepthMap.cpp" />
+    <ClCompile Include="Network\ServerMain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network\Client.h" />
@@ -56,6 +57,7 @@
     <ClInclude Include="Network\NetworkPacket.h" />
     <ClInclude Include="Holdable.h" />
     <ClInclude Include="DepthMap.h" />
+    <ClInclude Include="glm.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
