--- a/imgui.ini
+++ b/imgui.ini
@@ -1,9 +1,24 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
-Collapsed=1
+Pos=621,461
+Size=400,342
+Collapsed=0
 
 [Window][My Name is Window, IMGUI Window]
-Pos=56,84
-Size=354,370
+Pos=621,420
+Size=2046,1446
+Collapsed=0
+
+[Window][ScoreBoard]
+Pos=0,0
+Size=4092,2893
+Collapsed=0
+
+[Window][ScoreBoard_content]
+Pos=80,80
+Size=512,512
+Collapsed=0
+
+[Window][ScoreBoard_bg]
+Pos=0,0
+Size=512,512
 Collapsed=0
