add dynamic resize to UI, change font size and color

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,11 +1,11 @@
 [Window][Debug##Default]
 Pos=544,461
 Size=400,342
-Collapsed=0
+Collapsed=1
 
 [Window][My Name is Window, IMGUI Window]
-Pos=544,420
-Size=32,32
+Pos=621,420
+Size=911,644
 Collapsed=0
 
 [Window][ScoreBoard]
@@ -14,12 +14,17 @@ Size=4092,2893
 Collapsed=0
 
 [Window][ScoreBoard_content]
-Pos=80,80
-Size=512,512
+Pos=96,96
+Size=518,518
 Collapsed=0
 
 [Window][ScoreBoard_bg]
 Pos=0,0
-Size=512,512
+Size=518,518
+Collapsed=0
+
+[Window][Sale GUI]
+Pos=60,60
+Size=3240,2035
 Collapsed=0
 
