--- a/125_G.vcxproj.filters
+++ b/125_G.vcxproj.filters
@@ -31,6 +31,7 @@
     <ClCompile Include="UI\imgui\imgui_impl_glfw.cpp" />
     <ClCompile Include="UI\GUI.cpp" />
     <ClCompile Include="ColliderAABB.cpp" />
+    <ClCompile Include="Seed.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network\Client.h" />
@@ -80,6 +81,7 @@
     <ClInclude Include="UI\imgui\imgui.h" />
     <ClInclude Include="UI\imgui\imgui_impl_glfw.h" />
     <ClInclude Include="UI\GUI.h" />
+    <ClInclude Include="Seed.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
