--- a/125_G.vcxproj.filters
+++ b/125_G.vcxproj.filters
@@ -32,6 +32,7 @@
     <ClCompile Include="UI\GUI.cpp" />
     <ClCompile Include="ColliderAABB.cpp" />
     <ClCompile Include="Seed.cpp" />
+    <ClCompile Include="Growth.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Network\Client.h" />
@@ -82,6 +83,7 @@
     <ClInclude Include="UI\imgui\imgui_impl_glfw.h" />
     <ClInclude Include="UI\GUI.h" />
     <ClInclude Include="Seed.h" />
+    <ClInclude Include="Growth.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
