--- a/imgui.ini
+++ b/imgui.ini
@@ -25,11 +25,16 @@ Collapsed=0
 
 [Window][Sale GUI]
 Pos=60,60
-Size=2560,1361
+Size=640,480
 Collapsed=0
 
 [Window][Loading Screen]
 Pos=115,35
 Size=409,409
+Collapsed=0
+
+[Window][Progress Indicators]
+Pos=20,235
+Size=408,104
 Collapsed=0
 
